--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "node-red-contrib-mqtt-dynamictopic",
-  "version": "1.0.1",
-  "description": "Default MQTT in node, but with msg.topic support.",
-  "main": "mqtt-dynamic.js",
+  "name": "node-red-filterable-mqtt",
+  "version": "1.0.0",
+  "description": "MQTT in-node that accepts environment variables, and filter conditions",
+  "main": "mqtt-filter.js",
   "directories": {
     "lib": "lib"
   },
@@ -15,20 +15,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/xTheRamon/node-red-contrib-mqtt-dynamictopic.git"
+    "url": "git+https://github.com/constructorfleet/node-red-filterable-mqtt.git"
   },
   "keywords": [
-    "node-red"
+    "node-red",
+    "mqtt"
   ],
   "node-red": {
     "nodes": {
-      "mqtt-dynamic": "mqtt-dynamic.js"
+      "mqtt-filter": "mqtt-filtter.js"
     }
   },
-  "author": "xTheRamon + FredThx",
-  "license": "ISC",
+  "author": "Teagan42",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/FredThx/node-red-contrib-mqtt-dynamictopic/issues"
+    "url": "https://github.com/constructorfleet/node-red-filterable-mqtt/issues"
   },
-  "homepage": "https://github.com/FredThx/node-red-contrib-mqtt-dynamictopic#readme"
+  "homepage": "https://github.com/constructorfleet/node-red-filterable-mqtt#readme"
 }
